libs/bng/test/negative/N0301_negative_compartment_volume.bngl
# FAIL
# OUTPUT: error: Compartment 'A' has negative volume -1.


begin compartments
   A 3 -1
end compartments
